# Nether_Bedrock_Cracker

./: .gitignore  Cargo.toml  README.md  example_coords.txt  old paper -8788534344520786540.txt  seed 765906787396911863.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
bedrock_cracker/: Cargo.toml
bedrock_cracker/src/: block_data.rs  layer.rs  lib.rs
bedrock_cracker/src/raw_data/: block.rs  block_type.rs  mod.rs  mode.rs  modes.rs  sender.rs
cracker_gui/: Cargo.toml
cracker_gui/src/: main.rs
cracker_gui/src/tab/: controls.rs  input_error_style.rs  mod.rs
cracker_gui/src/tab/bedrock/: bedrock_tab.rs  block_entry.rs  mod.rs
src/: lib.rs  main.rs
