[package]
name = "cracker_gui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["tokio", "debug"] }
iced_lazy = "0.6"
iced_native = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"
anyhow = "1.0"
tokio = { version = "1.0", features = ["sync"] }
itertools = "0.10"
rustc-hash = "1.1"
env_logger = "0.10"
async-std = "1.0"
voronator = "0.2"
directories-next = "2.0"
num_cpus = "1.0"
rfd = "0.11"
bedrock_cracker = { path = "../bedrock_cracker", features = ["tokio"] }

